--- a/src/layout/_markdown-style.scss
+++ b/src/layout/_markdown-style.scss
@@ -293,9 +293,9 @@ $content-image-max-height: 560px;
   padding: 0.2em 0.4em;
 }
 
-.markdown :not(pre)>code.language-text {
+.markdown :not(pre) > code.language-text {
   background: rgba(135, 131, 120, 0.15);
-  color: #EB5757;
+  color: #eb5757;
   overflow-wrap: break-word;
 }
 
@@ -311,7 +311,7 @@ $content-image-max-height: 560px;
   appearance: none;
 }
 
-.markdown :checked+.radio-label {
+.markdown :checked + .radio-label {
   position: relative;
   z-index: 1;
   border-color: #0366d6;
@@ -634,11 +634,11 @@ $content-image-max-height: 560px;
   clear: both;
 }
 
-.markdown> :first-of-type {
+.markdown > :first-of-type {
   margin-top: 0 !important;
 }
 
-.markdown> :last-child {
+.markdown > :last-child {
   margin-bottom: 0 !important;
 }
 
@@ -673,11 +673,11 @@ $content-image-max-height: 560px;
   border-left: 2px solid var(--markdown-blockquote-border-color);
 }
 
-.markdown blockquote> :first-of-type {
+.markdown blockquote > :first-of-type {
   margin-top: 0;
 }
 
-.markdown blockquote> :last-child {
+.markdown blockquote > :last-child {
   margin-bottom: 0;
 }
 
@@ -750,11 +750,11 @@ $content-image-max-height: 560px;
   line-height: 200%;
 }
 
-.markdown li>p {
+.markdown li > p {
   margin-top: 16px;
 }
 
-.markdown li+li {
+.markdown li + li {
   margin-top: 0.25em;
 }
 
@@ -827,7 +827,7 @@ $content-image-max-height: 560px;
   word-wrap: normal;
 }
 
-.markdown pre>code {
+.markdown pre > code {
   padding: 0;
   margin: 0;
   font-size: 100%;
@@ -1004,7 +1004,7 @@ $content-image-max-height: 560px;
   list-style-type: none;
 }
 
-.markdown .task-list-item+.task-list-item {
+.markdown .task-list-item + .task-list-item {
   margin-top: 3px;
 }
 
@@ -1018,7 +1018,8 @@ $content-image-max-height: 560px;
   @media (max-width: 1400px) {
     display: none;
   }
-
+  max-height: 700px;
+  padding-top: 160px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -1053,11 +1054,11 @@ $content-image-max-height: 560px;
   display: flex !important;
   justify-content: center !important;
   width: 100% !important;
-  max-height: $content-image-max-height  !important;
+  max-height: $content-image-max-height !important;
 
   img {
     max-width: 100% !important;
-    max-height: $content-image-max-height  !important;
+    max-height: $content-image-max-height !important;
     width: auto !important;
     height: auto !important;
     position: relative !important;
@@ -1065,7 +1066,7 @@ $content-image-max-height: 560px;
 }
 
 // caption
-.markdown .gatsby-resp-image-wrapper+em {
+.markdown .gatsby-resp-image-wrapper + em {
   display: block;
   text-align: center;
   font-style: italic;
